--- a/static/style.css
+++ b/static/style.css
@@ -153,3 +153,9 @@ links a {
   padding-left: 5px !important;
   padding-right: 12px !important;
 }
+links i[class^="mdi-"] {
+  font-size: 16px;
+  position: relative;
+  top: 1px;
+  margin-right: 0.2em;
+}
