--- a/static/style.css
+++ b/static/style.css
@@ -79,16 +79,6 @@ body > .container {
   position: relative;
   height: 196px;
 }
-.panel:not(:hover),
-.panel:not(:hover) icon,
-.panel:not(:hover) stars,
-.panel:not(:hover) forks {
-  color: white !important;
-}
-.panel:hover,
-.panel:not(:hover) panel-heading hr {
-  background-color: white !important;
-}
 .panel icon {
   font-size: 35px;
   color: white;
@@ -140,13 +130,9 @@ links {
   left: 0;
   height: 77px;
   background: white;
-  transition: all 0.15s ease;
   padding: 10px 15px 0 0;
   text-align: right;
   color: #717171;
-}
-.panel:hover links{
-  transform: translateY(-77px);
 }
 links a {
   color: #717171 !important;
@@ -158,4 +144,49 @@ links i[class^="mdi-"] {
   position: relative;
   top: 1px;
   margin-right: 0.2em;
+}
+tags {
+  position: absolute;
+  top: 92px;
+  left: 0;
+  right: 90px;
+  color: white;
+  text-align: left;
+}
+tags span {
+  display: inline-block;
+  padding: 1px 4px;
+  border-radius: 3px;
+  opacity: 0.8;
+  text-transform: lowercase;
+  margin-bottom: 3px;
+  font-size: 12px;
+}
+
+links,
+panel-heading title,
+.panel tags {
+  transition: all 0.15s ease;
+}
+
+.panel:not(:hover),
+.panel:not(:hover) icon,
+.panel:not(:hover) stars,
+.panel:not(:hover) forks {
+  color: white !important;
+}
+.panel:hover,
+.panel:not(:hover) panel-heading hr {
+  background-color: white !important;
+}
+.panel:hover panel-heading icon,
+.panel:not(:hover) tags {
+  opacity: 0;
+}
+.panel:hover links{
+  transform: translateY(-77px);
+}
+.panel:hover panel-heading title,
+.panel:hover panel-heading tags {
+  transform: translateY(-45px);
 }
