--- a/static/style.css
+++ b/static/style.css
@@ -85,8 +85,13 @@ body > .container {
   position: relative;
   height: 196px;
 }
-.panel icon {
+.panel .icon {
+  display: block;
+  width: 35px;
+  height: 35px;
   font-size: 35px;
+  background-size: 27px auto;
+  background-repeat: no-repeat;
   color: white;
   margin-bottom: 10px;
 }
@@ -124,7 +129,7 @@ panel-body {
   display: block;
   display: -webkit-box;
   line-height: 16px;
-  height: 34px;
+  height: 33px;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-align: left;
@@ -185,7 +190,7 @@ panel-heading title,
 .panel:not(:hover) panel-heading hr {
   background-color: white !important;
 }
-.panel:hover panel-heading icon,
+.panel:hover panel-heading .icon,
 .panel:not(:hover) tags {
   opacity: 0;
 }
