--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,66 @@
-.navbar.navbar, .panel-info .panel-heading, .btn-info:not(.btn-link):not(.btn-flat) {
-    background-color: #00BCD4;
-}
-.btn-info:not(.btn-link):not(.btn-flat):hover {
-    background-color: #0097A7;
-}
-.btn-primary:not(.btn-link):not(.btn-flat) {
-    background-color: #CDDC39;
-}
-.btn-primary:not(.btn-link):not(.btn-flat):hover {
-    background-color: #AFB42B;
-}
-a, a:hover, .navbar .navbar-nav>li>a, .navbar .navbar-nav>li>a:hover {
-  color: #00BCD4;
+body, h2 {
+  font-family: Roboto;
+  font-weight: 100;
 }
 .navbar {
-  margin-bottom: 0;
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 1;
+  margin: 0;
 }
-.navbar.navbar-secondary {
-    background: #ffffff;
-    color: #009688;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    margin-bottom: 20px;
-    top: 60px;
+.navbar + .navbar {
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
 }
-.navbar-collapse {
-  padding: 0;
+@media all and (min-width: 768px) {
+  .navbar + .navbar .navbar-collapse {
+    padding: 0;
+    margin: 0 -15px;
+  }
 }
-.btn {
-  padding-left: 17px;
-  padding-right: 17px;
+.navbar.affix {
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
-body > .container {
-  padding-top: 140px;
+.navbar + .container {
+  padding-top: 40px;
+}
+.affix + .container {
+  padding-top: 96px;
+}
+@media all and (min-width: 992px) {
+  h1 {
+    padding: 0 !important;
+  }
+}
+@media all and (min-width: 992px) {
+  h1 img {
+    width: 100%;
+  }
+}
+h2 {
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+  font-size: 25px;
+  line-height: 60px;
+  font-weight: 100;
+  padding-bottom: 2px;
+}
+header p {
+  font-size: 30px;
+  line-height: 41px;
+  width: 70%;
+  margin-bottom: 50px;
+}
+@media all and (max-width: 990px){
+  header p {
+    width: auto;
+    font-size: 27px;
+    line-height: normal;
+  }
+}
+header p a {
+  color: inherit;
+}
+header p a:hover {
+  color: white;
+  text-decoration: none;
 }
 #tag-filter {
   display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
@@ -43,6 +68,41 @@ body > .container {
   display: -ms-flexbox;      /* TWEENER - IE 10 */
   display: -webkit-flex;     /* NEW - Chrome */
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+#tag-filter a {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 500;
+  outline: none;
+}
+#tag-filter a:not(.active):not(:hover) {
+  opacity: 0.5;
+}
+#tag-filter a:after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  height: 3px;
+  left: 15px;
+  right: 15px;
+  background-color: white;
+  border-radius: 2px;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  transition: transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  -moz-transition: -moz-transform 0.3s ease;
+}
+#tag-filter a:hover:after {
+  transform: scaleX(0.1);
+  -webkit-transform: scaleX(0.1);
+  -moz-transform: scaleX(0.1);
+}
+#tag-filter a.active:after {
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
 }
 #projects{
   text-align: justify;
@@ -52,7 +112,7 @@ body > .container {
 #projects .mix,
 #projects .gap{
   display: inline-block;
-  width: 49%;
+  width: 100%;
 }
 
 #projects .mix{
@@ -64,14 +124,14 @@ body > .container {
   width: 100%;
 }
 
-@media all and (min-width: 420px){
+@media all and (min-width: 440px){
   #projects .mix,
   #projects .gap{
-    width: 32%;
+    width: 49%;
   }
 }
 
-@media all and (min-width: 640px){
+@media all and (min-width: 768px){
   #projects .mix,
   #projects .gap{
     width: 32%%;
@@ -95,10 +155,6 @@ body > .container {
   color: white;
   margin-bottom: 10px;
 }
-title {
-  display: block;
-  font-size: 27px;
-}
 panel-heading {
   display: block;
   padding-bottom: 15px;
@@ -109,13 +165,24 @@ panel-heading hr {
   margin: 15px 0 0;
   border: 0;
 }
+panel-heading > div {
+  display: flex;
+}
+title {
+  display: block;
+  font-size: 27px;
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 stats {
-  position: absolute;
-  right: 0px;
-  bottom: 43px;
+  text-align: right;
+  flex-basis: 70px;
 }
 .panel stats > * {
   font-size: 14px;
+  white-space: nowrap;
 }
 stats i:before {
   font-size: 18px;
@@ -129,10 +196,13 @@ panel-body {
   display: block;
   display: -webkit-box;
   line-height: 16px;
-  height: 33px;
+  height: 38px;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-align: left;
+  font-weight: 400;
+  padding-top: 5px;
+  color: white;
 }
 links {
   position: absolute;
@@ -141,13 +211,13 @@ links {
   left: 0;
   height: 77px;
   background: white;
-  padding: 10px 15px 0 0;
+  padding: 17px 15px 0 0;
   text-align: right;
   color: #717171;
 }
 links a {
   color: #717171 !important;
-  padding-left: 5px !important;
+  padding-left: 7px !important;
   padding-right: 12px !important;
 }
 links i[class^="mdi-"] {
@@ -172,6 +242,7 @@ tags span {
   text-transform: lowercase;
   margin-bottom: 3px;
   font-size: 12px;
+  font-weight: 400;
 }
 
 links,
