Fixed tag list layout line break

--- a/static/style.css
+++ b/static/style.css
@@ -81,6 +81,9 @@ header p a:hover {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
   }
 }
 #tag-filter a {
