--- a/static/style.css
+++ b/static/style.css
@@ -153,7 +153,7 @@ header p a:hover {
 @media all and (min-width: 768px){
   #projects .mix,
   #projects .gap{
-    width: 32%%;
+    width: 32%;
   }
 }
 
